kubernetes/charts/templates/kong.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-mps
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: webui
          servicePort: 80
      - path: /mps/login
        #pathType: Prefix
        backend:
          serviceName: mps
          servicePort: 3000
      - path: /activate
        #pathType: Prefix
        backend:
          serviceName: rps
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rps
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: open-amt-jwt, admin-acl
spec:
  rules:
  - http:
      paths:
      - path: /rps
        #pathType: Prefix
        backend:
          serviceName: rps
          servicePort: 8081
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mps
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: open-amt-jwt, admin-acl
spec:
  rules:
  - http:
      paths:
      - path: /mps
        #pathType: Prefix
        backend:
          serviceName: mps
          servicePort: 3000
